# blind-jump-portable

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  README_french.md  compile-images.sh  config.ini  config.lisp  frostellar.raw  prep_spritesheet_for_gba.py  tilesheet2_top.h  tilesheet_top.h  vendor.yml
scripts/: init.lisp  post_levelgen.lisp  pre_levelgen.lisp  waypoint_clear.lisp
shaders/: colorShader.frag
sound/: sound_blaster.raw  sound_creak.raw  sound_footstep1.raw  sound_footstep2.raw  sound_footstep3.raw  sound_footstep4.raw
sounds/: sound_bell.raw  sound_blaster.raw  sound_cannon.raw  sound_click.raw  sound_coin.raw  sound_dodge.raw  sound_dropitem.raw  sound_explosion1.raw  sound_explosion2.raw  sound_footstep4.raw  sound_heart.raw  sound_laser1.raw  sound_msg.raw  sound_open_book.raw  sound_openbag.raw  sound_page_flip.raw  sound_pop.raw  sound_scroll.raw  sound_select.raw  sound_thud.raw  sound_tw_bell.raw  sound_typewriter.raw
source/: .clang-format  animation.cpp  animation.hpp  bgr_spritesheet.h  bgr_spritesheet.s  bgr_tilesheet.h  bgr_tilesheet.s  bitvector.hpp  buffer.hpp  bulkAllocator.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  color.hpp  conf.cpp  conf.hpp  config.cpp  context.cpp  context.hpp  critter.cpp  critter.hpp  dasher.cpp  dasher.hpp  dateTime.hpp  deltaClock.cpp  deltaClock.hpp  desktop_platform.cpp  easterEgg.cpp  endian.hpp  entity.hpp  function.hpp  game.cpp  game.hpp  game_script_defs.cpp  gba_platform.cpp  globals.cpp  globals.hpp  image_data.hpp  inventory.cpp  (+64 more)
source/blind_jump/: game.cpp  game.hpp  game_script_defs.cpp  inventory.cpp  localeString.hpp  network_event.cpp  network_event.hpp  persistentData.cpp  persistentData.hpp  powerup.hpp  settings.hpp
source/data/: blaster_info_flattened.h  blaster_info_flattened.s  charset.h  charset.s  charset_en_spn_fr.h  charset_en_spn_fr.s  death_text_chinese.h  death_text_chinese.s  death_text_english.h  death_text_english.s  death_text_french.h  death_text_french.s  death_text_italian.h  death_text_italian.s  death_text_russian.h  death_text_russian.s  ending_scene_2_flattened.h  ending_scene_2_flattened.s  ending_scene_flattened.h  ending_scene_flattened.s  file_chinese.cpp  file_english.cpp  file_french.cpp  file_german.cpp  file_init.cpp  file_italian.cpp  file_post_levelgen.cpp  file_pre_levelgen.cpp  file_russian.cpp  file_spanish.cpp  file_waypoint_clear.cpp  gbp_logo.h  gbp_logo.s  launch_flattened.h  launch_flattened.s  music_chantiers_navals_412.hpp  music_midsommar.hpp  music_murmuration.hpp  music_rocketlaunch.hpp  music_rocketlaunch.s  (+133 more)
source/details/: item.cpp
source/enemies/: critter.hpp  dasher.cpp  dasher.hpp  probe.hpp  turret.cpp  turret.hpp
source/entity/: entity.cpp  entity.hpp  entityGroup.hpp  peerPlayer.cpp  peerPlayer.hpp  player.cpp  player.hpp
source/graphics/: animation.hpp  ascii.s  bgr_old_poster_flattened.h  bgr_old_poster_flattened.s  bgr_overlay.h  bgr_overlay.s  bgr_overlay_journal.h  bgr_overlay_journal.s  bgr_spritesheet.h  bgr_spritesheet.s  bgr_spritesheet_boss0.h  bgr_spritesheet_boss0.s  bgr_tilesheet.h  bgr_tilesheet.s  blaster_info_flattened.h  blaster_info_flattened.s  charset_en_spn_fr.h  charset_en_spn_fr.s  color.hpp  contrast.hpp  images.h  launch_flattened.h  launch_flattened.s  old_poster.h  old_poster.s  old_poster_flattened.h  old_poster_flattened.s  overlay.cpp  overlay.h  overlay.hpp  overlay.s  overlay_cutscene.h  overlay_cutscene.s  overlay_journal.h  overlay_journal.s  overlay_network_flattened.h  overlay_network_flattened.s  seed_packet.h  seed_packet.s  seed_packet_flattened.h  (+36 more)
source/memory/: buffer.hpp  memory.hpp  pool.hpp  rc.hpp
source/number/: endian.hpp  int.h  numeric.cpp  numeric.hpp  random.cpp  random.hpp
source/platform/: October.hpp  blaster.hpp  blaster.s  clair_de_lune.hpp  desktop_platform.cpp  frostellar.hpp  gba.h  gba_arm_routines.cpp  gba_color.hpp  gba_platform.cpp  gba_platform_soundcontext.hpp  interrupt.c  interrupt_dispatch.s  key.hpp  lenkaland_frostellar.hpp  platform.hpp  reset.s  sb_computations.hpp  sb_ephemera.hpp  sb_omega.hpp  scottbuckley_computations.hpp  scottbuckley_hiraeth.hpp  scratch_buffer.hpp  sound_bell.hpp  sound_bell.s  sound_blaster.hpp  sound_blaster.s  sound_click.hpp  sound_click.s  sound_coin.hpp  sound_coin.s  sound_creak.hpp  sound_creak.s  sound_explosion1.hpp  sound_explosion1.s  sound_explosion2.s  sound_footstep1.hpp  sound_footstep1.s  sound_footstep2.hpp  sound_footstep2.s  (+11 more)
source/script/: CMakeLists.txt  bootstrap.cpp  bytecode.hpp  compiler.cpp  lisp.cpp  lisp.hpp  listBuilder.hpp  module.hpp  unittest.cpp  vm.cpp
source/state/: activeState.cpp  bossDeathSequenceState.cpp  (+39 more)
strings/: chinese.txt  english.txt  french.txt  german.txt  italian.txt  russian.txt  spanish.txt
useful_documents/: akkit_gba_specifications.html
(+220 files in other folders)
